# yolo_v8_object_detection

./: README.md  pyproject.toml
notes/: info.txt
