[tool.poetry]
name = "yolo-v8"
version = "0.1.0"
description = ""
authors = ["Santo K Thomas <santokalayil@gmail.com>"]
readme = "README.md"
packages = [{include = "yolo_v8"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
